goit-markup-hw-03(3)

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </section>
         <section class="qualities">
             <div class="container">
-                <h2 hidden>Main qualities</h2>
+                <h2 class="visually-hidden">Main qualities</h2>
                 <ul class="qualities-list list">
                     <li class="qualities-item">
                         <h3 class="qualities-item-title">Strategy</h3>
