--- a/index.html
+++ b/index.html
@@ -28,11 +28,10 @@
                     <li><a href="" class="header-item link">Contacts</a></li>
                 </ul>
             </nav>
-
             <address class="address">
                 <ul class="address-list list">
-                    <li><a href="mailto:info@devstudio.com" class="address-item link mail">info@devstudio.com</a></li>
-                    <li><a href="tel:+110001111111" class="address-item link phone">+11 (000) 111-11-11</a> </li>
+                    <li><a href="mailto:info@devstudio.com" class="address-item link">info@devstudio.com</a></li>
+                    <li><a href="tel:+110001111111" class="address-item link">+11 (000) 111-11-11</a> </li>
                 </ul>
             </address>
         </div>
