goit-markup-hw-03(5)

--- a/portfolio.html
+++ b/portfolio.html
@@ -40,7 +40,7 @@
     <main>
         <section class="menu">
             <div class="container">
-                <h1 class="hidden">Menu</h1>
+                <h1 class="visually-hidden">Menu</h1>
                 <ul class="menu-navigation-list  list">
                     <li class="menu-navigation-item"><button type="button" class="menu-navigation-btn">All</button></li>
                     <li class="menu-navigation-item"><button type="button" class="menu-navigation-btn">Web Site</button>
